ポートフォリオに必要な情報を追加

--- a/index.html
+++ b/index.html
@@ -3,9 +3,43 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>ハンドルネームのポートフォリオ</title>
+    <title>st3396のポートフォリオ</title>
   </head>
   <body>
     <h1>st3396</h1>
+    
+    <h2>About</h2>
+    <p>
+      ゲームとアニメが好きな一般大学生<br>
+      WEBデザイナーを目指し奮闘中
+    </p>
+
+    <h3>Profile</h3>
+    <ul>
+      <li>st3396</li>
+      <li>東京在住</li>
+      <li>好きなことはゲーム、ギター</li>
+    </ul>
+
+    <h3>Contact</h3>
+    <p>SNS</p>
+    <ul>
+      <li><a href="motoda.5050@gmail.com">Mail</a></li>
+      <li><a href="https://x.com/3396st?s=11">X(旧 Twitter)</a></li>
+    </ul>
+
+    <h3>History</h3>
+    <p>焼肉屋、ドラッグストア、ホームセンターアルバイト経験あり</p>
+    <table>
+      
+      <tr>
+        <th>2022 年</th>
+        <td>私立正則高校 <a href="https://nnn.ed.jp/"></a> 卒業</td>
+      </tr>
+      <tr>
+        <th>2018 年</th>
+        <td>全国中学生カヌースプリント選手権大会フォア7位入賞</td>
+      </tr>
+    </table>
   </body>
 </html>
