--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   </head>
   <body>
     <h1>st3396</h1>
-    <img src="profile_image.png">
+    <img src="IMG_2248.JPG">
     <h2>About</h2>
     <p>
       ゲームとアニメが好きな一般大学生<br>
