好きな動画を追加

--- a/index.html
+++ b/index.html
@@ -42,5 +42,8 @@
         <td>全国中学生カヌースプリント選手権大会フォア7位入賞</td>
       </tr>
     </table>
+
+    <h3>好きな動画</h3>
+    <iframe width="560" height="315" src="https://www.youtube.com/embed/-VKIqrvVOpo?si=5Fvwl7lzlaQHiV3v" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
   </body>
 </html>
