--- a/index.html
+++ b/index.html
@@ -45,5 +45,9 @@
 
     <h3>好きな動画</h3>
     <iframe width="560" height="315" src="https://www.youtube.com/embed/-VKIqrvVOpo?si=5Fvwl7lzlaQHiV3v" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+
+        <h3>X(旧 Twitter)</h3>
+    <a class="twitter-timeline" data-width="400" data-height="600" href="https://twitter.com/3396st?ref_src=twsrc%5Etfw">Tweets by 3396st</a> 
+    <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
   </body>
 </html>
